--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,13 +7,6 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
+    { "src": "/api/(.*)", "dest": "index.js" }
   ]
 }
